// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render CrudFull it should render CrudFull connected container 1`] = `
<CrudFull
  btnStyle={Object {}}
  changeModel={[Function]}
  createButtonTitle="Добавить"
  createDisabled={true}
  createModel={[Function]}
  deleteModel={[Function]}
  iconTheme="outline"
  restoreModel={[Function]}
  setCrudActionsFunc={[Function]}
  setCrudParams={[Function]}
  setModelModalForm={[Function]}
  size="default"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  submitShape={[Function]}
  tableStyle={Object {}}
  tableWrapper={null}
  toggleCreateModelModal={[Function]}
  updateShape={[Function]}
/>
`;

exports[`it should render Signup page it should render SignUp connected container 1`] = `
<CrudFull
  btnStyle={Object {}}
  changeModel={[Function]}
  createButtonTitle="Добавить"
  createDisabled={true}
  createModel={[Function]}
  deleteModel={[Function]}
  fields={Array []}
  handleSubmit={[Function]}
  iconTheme="outline"
  restoreModel={[Function]}
  setCrudActionsFunc={[Function]}
  setCrudParams={[Function]}
  setModelModalForm={[Function]}
  size="default"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  submitShape={[Function]}
  tableStyle={Object {}}
  tableWrapper={null}
  toggleCreateModelModal={[Function]}
  updateShape={[Function]}
/>
`;
